Logseq auto save

--- a/journals/2020_09_30.md
+++ b/journals/2020_09_30.md
@@ -5,3 +5,4 @@ title: Sep 30th, 2020
 ## Primer bullet
 ### Segundo bullet
 ### Bullet en el que se refiere a [[primet bullet]]
+## oli ca pasao con el [[segundo bullet]]
