--- a/journals/2020_09_30.md
+++ b/journals/2020_09_30.md
@@ -4,6 +4,8 @@ title: Sep 30th, 2020
 
 ## Primer bullet
 ### Segundo bullet
-#### cosas dentro
+#### cosas dentro blablabla
+#### más tonterias...
 ### Bullet en el que se refiere a [[primet bullet]]
 ## oli ca pasao con el [[segundo bullet]]
+##
